--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
+    "cordova-android": "6.3.0",
     "cordova-browser": "5.0.1",
     "cordova-ios": "4.5.4",
     "cordova-plugin-device": "^1.1.4",
-    "cordova-plugin-googlemaps": "^2.1.1",
     "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
