--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "lodash": "^4.17.4",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
+    "underscore.string": "^3.3.4",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
