--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "lodash": "^4.17.4",
+    "moment": "^2.19.4",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "underscore.string": "^3.3.4",
